--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ Flask-SQLAlchemy==3.1.1
 Flask-JWT-Extended==4.6.0
 Flask-CORS==4.0.1
 Flask-Mail==0.10.0
+psycopg2-binary==2.9.9
 routeros-api==0.21.0
 python-dotenv==1.0.1
 bcrypt==4.2.0
