Prod hardening, billing/invoices, Google login, NOC updates

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# .env.example - Environment variables for ISPFAST application
+﻿# .env.example - Environment variables for ISPFAST application
 # Copy this file to .env and fill in the values.
 # Variables marked as (REQUIRED for Production) must be set in production environments.
 
@@ -37,6 +37,12 @@ CACHE_DEFAULT_TIMEOUT=300
 # Comma-separated list of allowed origins for CORS. (REQUIRED for Production)
 # Example: http://localhost:3000,https://your-frontend.com
 CORS_ORIGINS=http://localhost:3000
+FRONTEND_URL=http://localhost:3000
+ALLOW_SELF_SIGNUP=false
+ALLOW_DEMO_LOGIN=false
+ALLOW_PAYMENT_DEMO=false
+ALLOW_GOOGLE_LOGIN=true
+VITE_GOOGLE_CLIENT_ID=498576867709-k90gkkme1de4sakkbviosj19fsjisap5.apps.googleusercontent.com
 
 # --- MikroTik Credentials ---
 # Default username for MikroTik API connections. (REQUIRED for Production)
