--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -11,3 +11,6 @@ VITE_BACKEND_URL=http://localhost:5000
 
 # Enable mock API fallback only for local demo when backend is down
 VITE_ENABLE_API_MOCKS=false
+
+# Google OAuth (Google Identity Services)
+VITE_GOOGLE_CLIENT_ID=
