feat: push PWA, tech app, tests

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,10 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
+# Local data / binaries
+backend/instance/*.db
+deploy/geoip/
+
 # Build artifacts
 build/
 dist/
