--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -14,3 +14,9 @@ VITE_ENABLE_API_MOCKS=false
 
 # Google OAuth (Google Identity Services)
 VITE_GOOGLE_CLIENT_ID=
+
+# Grafana embed (opcional)
+VITE_GRAFANA_URL=http://localhost:3001/d/ispfast/overview
+
+# WonderPush web key (para notificaciones push)
+VITE_WONDERPUSH_WEBKEY=
