--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,10 @@ jobs:
     defaults:
       run:
         working-directory: frontend
+    env:
+      VITE_WONDERPUSH_WEBKEY: ${{ secrets.WONDERPUSH_WEBKEY }}
+      WONDERPUSH_APPLICATION_ID: ${{ secrets.WONDERPUSH_APPLICATION_ID }}
+      WONDERPUSH_ACCESS_TOKEN: ${{ secrets.WONDERPUSH_ACCESS_TOKEN }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -61,3 +65,47 @@ jobs:
 
       - name: Unit tests
         run: pytest -q tests
+
+  e2e:
+    runs-on: ubuntu-latest
+    needs: frontend
+    defaults:
+      run:
+        working-directory: frontend
+    env:
+      VITE_WONDERPUSH_WEBKEY: ${{ secrets.WONDERPUSH_WEBKEY }}
+      WONDERPUSH_APPLICATION_ID: ${{ secrets.WONDERPUSH_APPLICATION_ID }}
+      WONDERPUSH_ACCESS_TOKEN: ${{ secrets.WONDERPUSH_ACCESS_TOKEN }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: npm
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps
+
+      - name: E2E (Playwright)
+        run: npm run test:e2e
+
+  loadtest:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup k6
+        uses: grafana/setup-k6-action@v1
+
+      - name: Smoke load test
+        env:
+          BASE_URL: https://httpbin.org
+        run: k6 run tests/load/smoke.js
