chore: enable traefik api insecure for debug

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -102,7 +102,7 @@ services:
   traefik:
     image: traefik:v2.10
     command:
-      - --api.insecure=false
+      - --api.insecure=true
       - --providers.docker=true
       - --providers.docker.exposedbydefault=false
       - --providers.file.directory=/etc/traefik/dynamic
@@ -119,6 +119,7 @@ services:
     ports:
       - "80:80"
       - "443:443"
+      - "8080:8080"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ./letsencrypt:/letsencrypt
