--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ node_modules/
 frontend/node_modules/
 frontend/dist/
 frontend/.vite/
+frontend/test-results/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
