feat(backups): harden backup APIs and add integrity verification

--- a/.env.example
+++ b/.env.example
@@ -95,6 +95,12 @@ MAIL_DEFAULT_SENDER=noreply@ispmax.com
 # Logging level (e.g., INFO, WARNING, ERROR, DEBUG)
 LOG_LEVEL=INFO
 
+# --- Backups ---
+# Directory where DB/OLT/MikroTik backup files are written.
+BACKUP_DIR=/app/backups
+# Optional pg_dump binary path override.
+PG_DUMP_PATH=pg_dump
+
 # --- Frontend Configuration ---
 # Hostname for the frontend application. Used by Traefik for routing. (REQUIRED for Production)
 # Example: your-frontend-domain.com
