feat(security): implement MikroTik password rotation job

--- a/.env.example
+++ b/.env.example
@@ -48,6 +48,9 @@ MIKROTIK_DEFAULT_USERNAME=admin
 
 # Default password for MikroTik API connections. (REQUIRED for Production)
 MIKROTIK_DEFAULT_PASSWORD=
+# Password rotation controls for admin jobs.
+ROTATE_PASSWORDS_DRY_RUN=false
+PASSWORD_ROTATION_LENGTH=24
 
 # --- OLT Live Automation (ZTE/Huawei/VSOL) ---
 # Optional fallback credentials used for live mode when a device-specific map is not provided.
