feat(backups): enforce retention policy and add prune workflow

--- a/.env.example
+++ b/.env.example
@@ -101,6 +101,8 @@ LOG_LEVEL=INFO
 # --- Backups ---
 # Directory where DB/OLT/MikroTik backup files are written.
 BACKUP_DIR=/app/backups
+# Retention window for automatic prune of old backup files.
+BACKUP_RETENTION_DAYS=14
 # Optional pg_dump binary path override.
 PG_DUMP_PATH=pg_dump
 
