--- a/.env.example
+++ b/.env.example
@@ -41,6 +41,12 @@ FRONTEND_URL=http://localhost:3000
 ALLOW_SELF_SIGNUP=false
 ALLOW_GOOGLE_LOGIN=true
 VITE_GOOGLE_CLIENT_ID=498576867709-k90gkkme1de4sakkbviosj19fsjisap5.apps.googleusercontent.com
+# Multi-tenant por subdominio (opcional, recomendado para produccion)
+TENANCY_ROOT_DOMAIN=fastisp.cloud
+TENANCY_MASTER_HOST=master.fastisp.cloud
+TENANCY_API_HOST=api.fastisp.cloud
+TENANCY_EXCLUDED_SUBDOMAINS=api,master,www
+TENANCY_ENFORCE_HOST_MATCH=false
 
 # --- MikroTik Credentials ---
 # Default username for MikroTik API connections. (REQUIRED for Production)
