--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -42,9 +42,10 @@ services:
       - ispmax-network
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.api.rule=Host(`api.fastisp.cloud`)"
+      - "traefik.http.routers.api.rule=Host(`${API_HOST:-api.fastisp.cloud}`)"
       - "traefik.http.routers.api.entrypoints=web,websecure"
       - "traefik.http.routers.api.tls.certresolver=myresolver"
+      - "traefik.http.routers.api.priority=120"
       - "traefik.http.routers.api.middlewares=secure-headers@docker,ipwhitelist@docker,geoip2@file"
       - "traefik.http.services.api.loadbalancer.server.port=5000"
 
@@ -66,10 +67,16 @@ services:
       - ispmax-network
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.frontend.rule=Host(`fastisp.cloud`)"
+      - "traefik.http.routers.frontend.rule=Host(`${FRONTEND_HOST:-fastisp.cloud}`)"
       - "traefik.http.routers.frontend.entrypoints=web,websecure"
       - "traefik.http.routers.frontend.tls.certresolver=myresolver"
+      - "traefik.http.routers.frontend.priority=100"
       - "traefik.http.routers.frontend.middlewares=secure-headers@docker,ipwhitelist@docker,geoip2@file"
+      - "traefik.http.routers.frontend-tenants.rule=HostRegexp(`{tenant:[a-z0-9-]+}.${TENANCY_ROOT_DOMAIN:-fastisp.cloud}`)"
+      - "traefik.http.routers.frontend-tenants.entrypoints=web,websecure"
+      - "traefik.http.routers.frontend-tenants.tls.certresolver=myresolver"
+      - "traefik.http.routers.frontend-tenants.priority=10"
+      - "traefik.http.routers.frontend-tenants.middlewares=secure-headers@docker,ipwhitelist@docker,geoip2@file"
       - "traefik.http.services.frontend.loadbalancer.server.port=80"
 
   celery-worker:
