feat(platform): add secure platform admin bootstrap flow

--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,8 @@ TENANCY_MASTER_HOST=master.fastisp.cloud
 TENANCY_API_HOST=api.fastisp.cloud
 TENANCY_EXCLUDED_SUBDOMAINS=api,master,www
 TENANCY_ENFORCE_HOST_MATCH=false
+# Token temporal para bootstrap del primer platform_admin (dejar vacio luego de usarlo)
+PLATFORM_BOOTSTRAP_TOKEN=
 
 # --- MikroTik Credentials ---
 # Default username for MikroTik API connections. (REQUIRED for Production)
