feat(auth): implementar recuperacion y reseteo de password

--- a/.env.example
+++ b/.env.example
@@ -49,6 +49,10 @@ TENANCY_EXCLUDED_SUBDOMAINS=api,master,www
 TENANCY_ENFORCE_HOST_MATCH=false
 # Token temporal para bootstrap del primer platform_admin (dejar vacio luego de usarlo)
 PLATFORM_BOOTSTRAP_TOKEN=
+# Recuperacion de password (token temporal, en minutos)
+PASSWORD_RESET_TOKEN_TTL_MINUTES=30
+# Solo para entornos de desarrollo/pruebas: devuelve reset_token en respuesta de /auth/password/forgot
+ALLOW_INSECURE_PASSWORD_RESET_TOKEN_RESPONSE=false
 
 # --- MikroTik Credentials ---
 # Default username for MikroTik API connections. (REQUIRED for Production)
