feat(platform): improve tenant cards and auto trial timestamp

--- a/.env.example
+++ b/.env.example
@@ -49,6 +49,8 @@ TENANCY_EXCLUDED_SUBDOMAINS=api,master,www
 TENANCY_ENFORCE_HOST_MATCH=false
 # Token temporal para bootstrap del primer platform_admin (dejar vacio luego de usarlo)
 PLATFORM_BOOTSTRAP_TOKEN=
+# Dias por defecto para fin de trial de nuevos tenants (si billing_status=trial y no se envia fecha)
+TENANT_DEFAULT_TRIAL_DAYS=30
 # Recuperacion de password (token temporal, en minutos)
 PASSWORD_RESET_TOKEN_TTL_MINUTES=30
 # Solo para entornos de desarrollo/pruebas: devuelve reset_token en respuesta de /auth/password/forgot
