feat(olt): add ACS TR-069 reprovision integration

--- a/.env.example
+++ b/.env.example
@@ -99,6 +99,15 @@ TWILIO_PHONE_NUMBER=
 # OpenAI API key for AI features
 OPENAI_API_KEY=
 
+# --- ACS / TR-069 ---
+# ACS endpoint for reprovision API integration (optional).
+ACS_BASE_URL=
+ACS_API_KEY=
+ACS_DEFAULT_HOST=
+ACS_REPROVISION_PATH=/api/v1/tr069/reprovision
+ACS_TIMEOUT_SECONDS=8
+ACS_VERIFY_TLS=true
+
 # --- Email Configuration ---
 # SMTP server settings for sending emails
 MAIL_SERVER=smtp.gmail.com
