feat(block-1): mikrotik bth bootstrap + olt/grafana readiness

--- a/.env.example
+++ b/.env.example
@@ -141,3 +141,8 @@ TRAEFIK_ACME_EMAIL=your-email@example.com
 # --- Other (e.g., Grafana, if applicable) ---
 # Grafana admin password (if Grafana is part of the deployment)
 GRAFANA_PASSWORD=admin
+GRAFANA_URL=
+GRAFANA_HEALTHCHECK_PATH=/api/health
+GRAFANA_VERIFY_TLS=true
+GRAFANA_TIMEOUT_SECONDS=4
+GRAFANA_DATASOURCE_UID=
