feat(mikrotik): add global wireguard profile for fast onboarding

--- a/.env.example
+++ b/.env.example
@@ -62,6 +62,13 @@ MIKROTIK_DEFAULT_USERNAME=admin
 
 # Default password for MikroTik API connections. (REQUIRED for Production)
 MIKROTIK_DEFAULT_PASSWORD=
+# WireGuard profile global para scripts de conexion rapida (recomendado en produccion)
+# Ejemplo endpoint VPS: 187.77.47.232:51820
+MIKROTIK_WG_ENDPOINT=vpn.fastisp.cloud:51820
+# Public key del servidor WireGuard del VPS (no private key)
+MIKROTIK_WG_SERVER_PUBLIC_KEY=
+# Subredes que se alcanzan por el tunel desde cada MikroTik
+MIKROTIK_WG_ALLOWED_SUBNETS=10.250.0.0/16,10.251.0.0/16
 # Password rotation controls for admin jobs.
 ROTATE_PASSWORDS_DRY_RUN=false
 PASSWORD_ROTATION_LENGTH=24
