Automate MikroTik WG peer registration in Connection Express

--- a/.env.example
+++ b/.env.example
@@ -69,6 +69,19 @@ MIKROTIK_WG_ENDPOINT=vpn.fastisp.cloud:51820
 MIKROTIK_WG_SERVER_PUBLIC_KEY=
 # Subredes que se alcanzan por el tunel desde cada MikroTik
 MIKROTIK_WG_ALLOWED_SUBNETS=10.250.0.0/16,10.251.0.0/16
+# Registro automatico de peer MikroTik en WireGuard del VPS
+# auto: intenta local y si no puede usa SSH; local: solo comando local; ssh: solo por SSH; manual: solo genera comando
+MIKROTIK_WG_VPS_SYNC_MODE=auto
+MIKROTIK_WG_VPS_INTERFACE=wg0
+MIKROTIK_WG_VPS_PERSIST=true
+# Si backend corre en Docker normalmente se recomienda modo ssh:
+MIKROTIK_WG_VPS_SSH_HOST=
+MIKROTIK_WG_VPS_SSH_PORT=22
+MIKROTIK_WG_VPS_SSH_USER=
+MIKROTIK_WG_VPS_SSH_PASSWORD=
+MIKROTIK_WG_VPS_SSH_KEY_PATH=
+MIKROTIK_WG_VPS_SSH_TIMEOUT_SECONDS=8
+MIKROTIK_WG_VPS_SSH_USE_SUDO=true
 # Password rotation controls for admin jobs.
 ROTATE_PASSWORDS_DRY_RUN=false
 PASSWORD_ROTATION_LENGTH=24
